--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
         let generatedToken = ''; 
 
         // --- URL de tu Webhook de n8n ---
-         const N8N_WEBHOOK_URL = 'https://inmunoexito-n8n.ucnwvo.easypanel.host/prueba-de-webhook/cac22e09-0c9f-4947-b221-498daeff820e'; 
+         const N8N_WEBHOOK_URL = "https://immunoexito-n8n.ucnwvo.easypanel.host/webhook/chatogtrf"; 
         // --- --- --- --- --- --- --- ---
 
         // Función para generar un UUID v4 (token simple)
