--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
         let generatedToken = ''; 
 
         // --- URL de tu Webhook de n8n ---
-         const N8N_WEBHOOK_URL = "https://immunoexito-n8n.ucnwvo.easypanel.host/webhook-test/chato"; 
+         const N8N_WEBHOOK_URL = "https://immunoexito-n8n.ucnwvo.easypanel.host/webhook/chato; 
         // --- --- --- --- --- --- --- ---
 
         // Función para generar un UUID v4 (token simple)
