--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
         let generatedToken = ''; 
 
         // --- URL de tu Webhook de n8n ---
-         const N8N_WEBHOOK_URL = "https://immunoexito-n8n.ucnwvo.easypanel.host/webhook/chato"; 
+         const N8N_WEBHOOK_URL = "https://immunoexito-n8n.ucnwvo.easypanel.host/webhook/chato2"; 
         // --- --- --- --- --- --- --- ---
 
         // Función para generar un UUID v4 (token simple)
@@ -767,3 +767,4 @@
     </script>
 </body>
 </html>
+
